cluster/apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
spec:
  selector:
    app: navidrome
  ports:
    - port: 80
      targetPort: 80
